<resources>
    <string name="app_name">CW_1_Sample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_in_main_list">List Of Trip</string>
    <string name="menu_in_main_about">About</string>
    <string name="menu_in_main_register">Register New Trip </string>

    <string name="error_empty_list">Empty list.</string>
    <string name="error_not_found">Not Found</string>
    <string name="error_no_info">No Information</string>
    <string name="error_blank_name">Name cannot be blank.</string>
    <string name="error_blank_destination">Destination cannot be blank.</string>
    <string name="error_blank_start_date">Starting Date cannot be blank.</string>

    <string name="notification_empty_resident_list">There is no resident.</string>
    <string name="notification_empty_request_list">There is no request.</string>
    <string name="notification_create_success">Created successfully.</string>
    <string name="notification_create_fail">Not created successfully.</string>
    <string name="notification_delete_success">Deleted successfully.</string>
    <string name="notification_delete_fail">Not deleted successfully.</string>
    <string name="notification_update_success">Updated successfully.</string>
    <string name="notification_update_fail">Not updated successfully.</string>
    <string name="notification_reset_database_success">Reset database successfully.</string>
    <string name="notification_delete_confirm">Are you sure to delete this?.</string>

    <string name="label_name">Name Of Trip</string>
    <string name="label_start_date">Starting Date</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_owner">Yes</string>
    <string name="label_rating">Rating Now</string>
    <string name="label_tenant">No</string>
    <string name="label_type">Type</string>
    <string name="label_add_request">Add More Information</string>
    <string name="label_register">Notes Trip NOW</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_update">Update</string>
    <string name="label_search">Search</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_content">Content</string>
    <string name="label_setting">Setting</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="label_reset_database">Reset Database</string>
    <string name="label_backup">Firebase Backup</string>
    <string name="label_backup_firestore">Firestore Backup</string>
    <string name="notification_backup_success">Sucess Backup</string>
    <string name="notification_backup_fail">False to Backup</string>

    <string-array name="request_type">
        <item>Travel(Airplane,Bus,car)</item>
        <item>Food(Restaurant,Beach ,Bar)</item>
        <item>Other</item>
    </string-array>
</resources>