<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.request.RequestCreateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/fmRequestCreateType"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/label_type"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/fmRequestCreateLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="@+id/fmRequestCreateType"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmRequestCreateType"
            app:layout_constraintTop_toBottomOf="@+id/fmRequestCreateType">

            <EditText
                android:id="@+id/fmRequestCreateDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/label_date"
                android:textColor="@color/Discordblack"
                android:inputType="date"
                android:textSize="15sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/fmRequestCreateTime"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/label_time"
                android:textColor="@color/Discordblack"
                android:inputType="time"
                android:textSize="15sp"
                android:autofillHints="" />
        </LinearLayout>

        <EditText
            android:id="@+id/fmRequestCreateContent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="Amount"
            android:inputType="number"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="@+id/fmRequestCreateLinearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmRequestCreateLinearLayout"
            app:layout_constraintTop_toBottomOf="@+id/fmRequestCreateLinearLayout" />

        <EditText
            android:id="@+id/fmRequestCreateComment"
            android:layout_width="354dp"
            android:layout_height="91dp"
            android:layout_marginTop="92dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="Additional Comments"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="@+id/fmRequestCreateLinearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmRequestCreateLinearLayout"
            app:layout_constraintTop_toBottomOf="@+id/fmRequestCreateLinearLayout" />

        <Button
            android:id="@+id/fmRequestCreateButtonCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="152dp"
            android:text="@string/label_cancel"
            android:textSize="12sp"
            android:textColor="@color/Discordblack"
            android:background="@drawable/btnshape"
            app:layout_constraintStart_toStartOf="@+id/fmRequestCreateContent"
            app:layout_constraintTop_toBottomOf="@+id/fmRequestCreateContent" />

        <Button
            android:id="@+id/fmRequestCreateButtonAdd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/btnshape"
            android:text="Add Trip Information"
            android:textColor="@color/Discordblack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/fmRequestCreateButtonCancel"
            app:layout_constraintEnd_toEndOf="@+id/fmRequestCreateContent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/fmRequestCreateButtonCancel"
            app:layout_constraintTop_toTopOf="@+id/fmRequestCreateButtonCancel"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>