<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resident.ResidentSearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fmResidentSearchTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Search"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fmResidentSearchName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchTitle" />

        <EditText
            android:id="@+id/fmResidentSearchDiscription"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="Discription"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchTitle"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/fmResidentSearchDestination"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="Destination"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchTitle"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/fmResidentSearchDate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="92dp"
            android:ems="10"
            android:hint="@string/label_start_date"
            android:inputType="date"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentSearchName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentSearchName"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchTitle" />

        <EditText
            android:id="@+id/fmResidentSearchOther"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="388dp"
            android:ems="10"
            android:hint="Other"
            android:inputType="text"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentSearchName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentSearchName"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchTitle" />

        <EditText
            android:id="@+id/fmResidentSearchEndDate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="308dp"
            android:ems="10"
            android:hint="EndDate"
            android:inputType="date"
            android:textSize="15sp"
            android:textColor="@color/Discordblack"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentSearchName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fmResidentSearchName"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchTitle" />

        <Button
            android:id="@+id/fmResidentSearchButtonCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="208dp"
            android:text="@string/label_cancel"
            android:textColor="@color/Discordblack"
            android:background="@drawable/btnshape"
            app:layout_constraintStart_toStartOf="@+id/fmResidentSearchDate"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchDiscription" />

        <Button
            android:id="@+id/fmResidentSearchButtonSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:text="@string/label_search"
            android:textColor="@color/Discordblack"
            android:background="@drawable/btnshape"
            app:layout_constraintBottom_toBottomOf="@+id/fmResidentSearchButtonCancel"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentSearchDate"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/fmResidentSearchButtonCancel"
            app:layout_constraintTop_toTopOf="@+id/fmResidentSearchButtonCancel"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>